2009-09-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* lread.c (Fload): Also run do-after-load-evaluation while dumping.

2009-09-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* lread.c (Fload): Don't output a message after loading an obsolete
	package any more (done in Lisp now).

2009-09-12  Chong Yidong  <cyd@stupidchicken.com>

	* fns.c (syms_of_fns): Doc fix (Bug#4227).

2009-09-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* keymap.c (Fwhere_is_internal): Use nconc2.

2009-09-11  Alan Mackenzie  <acm@muc.de>

	* dispnew.c (Fsend_string_to_terminal): Amend doc string to cover
	batch mode.

2009-09-11  Andreas Schwab  <schwab@linux-m68k.org>

	* xdisp.c (display_mode_element): Detect cycles.

2009-09-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* keymap.c (where_is_internal): Don't erroneously return nil right after
	filling the cache.
	(where_is_internal_1): Fix up typo.

2009-09-11  Glenn Morris  <rgm@gnu.org>

	* frame.c (Fx_parse_geometry): Unify the X and NS versions so that they
	share a common doc-string.

2009-09-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* keymap.c (get_keymap): Return the actual keymap symbol rather than
	t for autoloaded keymaps when autoloading is not allowed (bug#4393).

	* keymap.c (QCadvertised_binding): New constant.
	(syms_of_keymap): Initialize it.
	(Fwhere_is_internal): Try and use bindings from :advertised-binding
	if applicable.

2009-09-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* keyboard.c (Qmenu_alias, Vdefine_key_rebound_commands): Remove.
	(parse_menu_item): Streamline since bindings are recomputed all the
	time anyway.  Don't bother checking Vdefine_key_rebound_commands any
	more and don't support lmenu's menu-alias any more either.

	* keymap.c (where_is_internal_data): Make noindirect a boolean.
	(where_is_internal): Strip it down to only traverse the keymaps.
	Move the cache handling from Fwhere_is_internal to here.
	(Fwhere_is_internal): Move the handling of remapping and the choice of